[package]
name = "telegram-tag-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telegram-tag-bot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
