[package]
name = "tagbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tagbot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
futures = "0.3"
anyhow = "1.0"
rand = "0.8"
